New Features:
- Players can find a new icon in their Character Frame next to "Gear Manager" to collect all unknown and appropriate appearances from their inventory.
- Players can now enable "Chat Icons" in the settings to show item and collection status icons directly in the chat frame.

Enhancements:
- The Deposit Keep feature for guild banks now also works in reverse; if your funds are below your threshold, then visiting a guild bank will withdraw instead. (Keep Me Safe still applies for withdraws.)
- The World Event queue button will now display your selected roles in its tooltip.